--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
 <body>
     <!-- The Modal -->
-<div id="myModal" class="modal">
+    <div id="myModal" class="modal">
 
         <!-- Modal content -->
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <p>Congratulations! You win!</p>
-        </div>
-      
-      </div>
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Congratulations! You win!</p>
+    </div>
+
+    </div>
+    <div>
+
+        <h1>Arcade Game</h1>
+        
+        <p>
+            In this game you have a Player and Enemies (Bugs). The goal of the player is to reach the water, without colliding into any one of the enemies. 
+            The player can move left, right, up, and down (using the arrow keys on your keyboard). The enemies move in varying speeds on the paved block portion of the scene. 
+            Once the player collides with an enemy, the game is reset and the player moves back to the start square. Once the player reaches the water the game is won.
+        </p>
+    </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
